# engram

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements-base.txt  requirements-cpu.txt
app/: main.py  services.py
mcp-rag-service/: pyproject.toml
mcp-rag-service/src/: rag_client.py  rag_mcp_server.py
templates/: index.html  report_view.html  reports.html
tools/: com.engram.sync.plist  engram-sync.json  engram_sync.py  okf_stamp.py  test_engram_sync_reconcile.py
